# BROcoli

./: .gitignore  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  CLA.md  CONTRIBUTING.md  LICENSING_FAQ.md  README.md  improvements.md  index.html  sw.js  version.json
.github/: copilot-instructions.md  prompt-prefix.md
.github/workflows/: main.yml
Assets/: 3dRenderer.asset  3dRenderer_Renderer.asset  UniversalRenderPipelineGlobalSettings.asset
Assets/Materials/: EnemySpriteHueSat.mat  SpriteHueSaturation.shader  UnlitHueSaturation.shader
Assets/Plugins/WebGL/: GameUIBridge.jslib
Assets/Plugins/x86_64/: README.md
Assets/Resources/: PerformanceTestRunInfo.json
Assets/Resources/CursedDevolpmentStudioAss Assets/: AttackSpeedBoost.prefab  BoostAttackSpeed.prefab  BoostDamage.prefab  BoostDetectionRadius.prefab  BoostExperience.prefab  BoostHandler.prefab  BoostHealth.prefab  BoostMagnet.prefab  BoostMovementSpeed.prefab  EnemyEasy.prefab  EnemyShootingHard.prefab  Exp_gain.prefab  HealthBoost.prefab  MiniCoronaProjectile.prefab  PlayerStats.prefab
Assets/Resources/CursedDevolpmentStudioAss Assets/WaveConfigs/: Wave_1.asset  Wave_11.asset
Assets/Resources/CursedDevolpmentStudioAss Assets/Waves/: EnemyEasy.prefab  EnemyEasyChunky.prefab  EnemyHard.prefab  EnemyHardChunky.prefab  EnemyNormal.prefab  EnemyNormalChunky.prefab  EnemyShooting.prefab  EnemyShootingHard.prefab  EnemySpawner.prefab  EnemySpider.prefab  WaveGenerator.prefab  Wave_1.asset  Wave_10.asset  Wave_11.asset  Wave_12.asset  Wave_13.asset  Wave_14.asset  Wave_15.asset  Wave_2.asset  Wave_3.asset  Wave_4.asset  Wave_5.asset  Wave_6.asset  Wave_7.asset  Wave_8.asset  Wave_9.asset
Assets/Resources/Sprites/enemy-0/: enemy-0-material.mat  enemy-0.fbx
Assets/Scenes/: EndGame.unity  Game.unity  MainMenuScene.unity  MaskGame.unity
Assets/Scripts/: Bar.cs  CameraShake.cs  DLSSManager.cs  DamageVignette.cs  EndGameCTAManager.cs  EndGameUI.cs  EnemyBase.cs  EnemyProjectile.cs  EnemyProximityLighting.cs  EnemyScript.cs  EnemySpawner1.cs  EnemySpawnerOld.cs  EnemyWalkAnimation.cs  ExpGain.cs  ForceLandscapeAspect.cs  FrameRateOptimizer.cs  GamePreloader.cs  GameStates.cs  HydraEnemyScript.cs  IPrewarmable.cs  InfiniteBackground.cs  InputManager.cs  LevelUpScreen.cs  LoadingScreenUI.cs  MobileGraphicsOptimizer.cs  PauseMenu.cs  PlayerSpotlight2D.cs  ProceduralEnemyGunAudio.cs  ProceduralEnemyMeleeAudio.cs  ProceduralEnemyProjectileHitAudio.cs  ProceduralEnemyWalkAudio.cs  ProceduralFootstepAudio.cs  ProceduralGunAudio.cs  ProceduralLevelUpAudio.cs  ProceduralProjectileHitAudio.cs  ProceduralSprayAudio.cs  ProceduralXPPickupAudio.cs  SanitizerSpray.cs  ShootingEnemyScript.cs  ShuffleWalkVisual.cs  (+6 more)
Assets/Scripts/Boost/: AttackSpeedBoost.cs  BoostBase.cs  BoostHandler.cs  DamageBoost.cs  DetectionRadiusBoost.cs  ExperienceBoost.cs  HealthBoost.cs  MagnetBoost.cs  MovementSpeedBoost.cs  ProceduralBoostAudio.cs  SprayRangeBoost.cs  SprayWidthBoost.cs  TemporaryBoostType.cs
Assets/Scripts/Core/: EnemySpatialHash.cs  GameContext.cs
Assets/Scripts/Editor/: ConfigurePlayerLog.cs  SanitizerSpraySetup.cs  StreamlinePostBuild.cs
Assets/Scripts/Enemy Spawner/: EnemySpawner.cs
Assets/Scripts/Enemy Spawner/Animation/: EnemyWalkAnimation.cs
Assets/Scripts/Enemy Spawner/Enemies/: EliteEnemyEffects.cs  EnemyBase.cs  EnemyColorVariant.cs  EnemyProjectile.cs  EnemyScript.cs
Assets/Scripts/Enemy Spawner/Waves/: WaveConfig.cs  WaveGenerator.cs
Assets/Scripts/MainMenu/: MainMenu.cs
Assets/Scripts/Player/: PlayerController.cs  PlayerStats.cs
Assets/Scripts/Pooling/: ObjectPool.cs  PoolManager.cs
Assets/Scripts/Rendering/: DLSSRenderFeature.cs  DLSSRenderScaleManager.cs  DLSSUpscalePass.cs
Assets/Scripts/Rendering/DLSS/: DLSSPassHelpers.cs  DLSSResourceTagger.cs  DLSSUpscalePass.cs  DLSSUpscalePassLegacy.cs  StreamlineDLSSBuffers.cs  StreamlineDLSSCore.cs  StreamlineDLSSEvaluate.cs  StreamlineDLSSNative.cs  StreamlineDLSSPlugin.cs  StreamlineDLSSTypes.cs
Assets/Scripts/Rendering/Reflex/: StreamlineReflexCore.cs  StreamlineReflexDiagnostics.cs  StreamlineReflexMarkers.cs  StreamlineReflexNative.cs  StreamlineReflexPlugin.cs  StreamlineReflexTypes.cs
Assets/Scripts/Spray/: ProceduralSprayAudio.cs  SanitizerSpray.cs  SprayAudioClipGenerator.cs  SprayAudioFilters.cs  SprayDamageHandler.cs  SprayHandVisuals.cs  SprayLayerCore.cs  SprayLayerDroplet.cs  SprayLayerFactory.cs  SprayLayerGlow.cs  SprayLayerMist.cs  SprayMaterialCreator.cs  SprayParticleCollisionHandler.cs  SprayParticleController.cs  SprayParticleLayers.cs  SpraySettings.cs
Assets/Scripts/UI/: ControllerUINavigator.cs  PlayerStatsDisplay.cs  ProceduralUIAudio.cs  VictoryScreen.cs
Assets/Scripts/gamejam-2022/: CameraController.cs  GameOverScreen.cs  PlayerAudioHandler.cs  PlayerCombat.cs  PlayerController.cs  PlayerDamageHandler.cs  PlayerInputHandler.cs  PlayerMovement.cs  Projectile.cs
Assets/Scripts/gamejam-2022/Dialog/: DialogueManager.cs
Assets/Settings/: UniversalRP.asset
Assets/WebGLTemplates/Custom/: PWA-README.md  index.html  manifest-staging.json  sw.js  version-check.js  version.json
Assets/_Recovery/: 0 (1).unity
BranchMain/: index.html  manifest-staging.json  manifest.json  sw.js  version-check.js  version.json
ProjectSettings/: AudioManager.asset  GraphicsSettings.asset  ProjectSettings.asset  TagManager.asset
UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-6000.dwlt
_branch_main/: index.html  version.json
main/: index.html  update-version.js  version.json
native/NvidiaReflex/: CMakeLists.txt  README.md  StreamlineCommon.cpp  StreamlineCommon.h  StreamlineDLSSCore.cpp  StreamlineDLSSLegacy.cpp  StreamlineDLSSPlugin.cpp  StreamlineFrameGen.cpp  StreamlineInit.cpp  StreamlineReflex.cpp  StreamlineReflexPlugin.cpp  build-reflex-plugin.ps1  streamline-config.json
native/NvidiaReflex/Unity/: IUnityGraphics.h  IUnityGraphicsD3D11.h  IUnityGraphicsD3D12.h  IUnityInterface.h
scripts/: unity-build-check.ps1  unity-build-check.sh  unity-clean.ps1  unity-clean.sh
